Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24659

Console application runs with /bin/sh, but not with SHELL enviroment

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.14.0-beta1
    • Qt Creator 4.13.1
    • Debugger
    • None
    • Linux/X11
    • 361b5e35306d3f3f5cf488a67560523d4e1e6cf0 (qt-creator/qt-creator/master)

    Description

      When the console application starts from the qtcreator (Ctrl+R), the program /bin/sh is called despite the SHELL environment variable (/bin/bash).

      This results in a startup error when input redirection options are present:
      MyConsoleApp< <(echo "123 456")...
      /bin/sh: 1: Syntax error: redirection unexpected

      Ubuntu 20.04

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-24659
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            aaa aaa
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes